fixing text align

--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 h1 {
 	font-family: verdana;
 	color: #c890d4;
+	text-align: center;
 }
 p {
 	font-family: verdana;
 	color: #c890d4;
+	text-align: center;
 }
 body {
-	background-color: #624569;
+	background-color: #624569
 }
